using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public  static class Constants
{
    // Animations
    public static string ANIM_RUN = "Run";
    public static string ANIM_DIE = "Die";
    public static string ANIM_DANCE = "Dance";

    // Tap Events
    public static string TAP_TO_PLAY = "Tap to Play";
    public static string TRY_AGAIN = "Try Again";
    public static string NEXT_LEVEL = "Next Level";

    // Invokes
    public static string SHOW_UI = "ShowUI";
    public static string HIDE_BULLET = "HideBullet";
    public static string RESCALE_BONES = "RescaleBones";

    // PlayerPrefs
    public static string LEVEL_INDEX = "LevelIndex";
    public static string BULLET_COUNT = "BulletCount";
    public static string DIAMOND_COUNT = "DiamondCount";
}
